# ChangeLog for dev-libs/libebml
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libebml/ChangeLog,v 1.122 2013/03/21 09:10:12 radhermit Exp $

*libebml-1.3.0 (21 Mar 2013)

  21 Mar 2013; Tim Harder <radhermit@gentoo.org> +libebml-1.3.0.ebuild,
  +files/libebml-1.3.0-makefile.patch:
  Version bump and add subslot.

  29 May 2012; Alexis Ballier <aballier@gentoo.org> libebml-1.2.2.ebuild:
  keyword ~amd64-fbsd

  08 Mar 2012; Brent Baude <ranger@gentoo.org> libebml-1.2.2.ebuild:
  Marking libebml-1.2.2 ppc64 for bug 400013

  12 Feb 2012; Raúl Porcel <armin76@gentoo.org> libebml-1.2.2.ebuild:
  alpha/ia64/sparc stable wrt #400013

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org> libebml-1.2.2.ebuild:
  Stable for HPPA (bug #400013).

  06 Feb 2012; Brent Baude <ranger@gentoo.org> libebml-1.2.2.ebuild:
  Marking libebml-1.2.2 ppc for bug 400013

  05 Feb 2012; Markus Meier <maekke@gentoo.org> libebml-1.2.2.ebuild:
  arm stable, bug #400013

  27 Jan 2012; Jeff Horelick <jdhore@gentoo.org> libebml-1.2.2.ebuild:
  x86 stable per bug 400013

  26 Jan 2012; Markos Chandras <hwoarang@gentoo.org> libebml-1.2.2.ebuild:
  Stable on amd64 wrt bug #400013

  27 Nov 2011; Tim Harder <radhermit@gentoo.org> -libebml-0.7.8-r1.ebuild,
  -libebml-0.7.8-r2.ebuild, -files/libebml-0.7.8-makefile-fixup.patch,
  -libebml-0.8.0.ebuild, -files/libebml-0.8.0-makefile-fixup.patch,
  -libebml-1.0.0.ebuild, -files/libebml-1.0.0-makefile-fixup.patch,
  -libebml-1.2.0.ebuild:
  Remove old.

  20 Nov 2011; Kacper Kowalik <xarthisius@gentoo.org> libebml-1.2.1.ebuild:
  ppc/ppc64 stable wrt #376395

  18 Oct 2011; Jeroen Roovers <jer@gentoo.org> libebml-1.2.1.ebuild:
  Stable for HPPA (bug #376395).

*libebml-1.2.2 (26 Sep 2011)

  26 Sep 2011; Tim Harder <radhermit@gentoo.org> +libebml-1.2.2.ebuild:
  Version bump. Add static-libs use flag (bug #381661), add debug use flag,
  update to EAPI 4.
