@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libebml
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libebml/ChangeLog,v 1.122 2013/03/21 09:10:12 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libebml/ChangeLog,v 1.123 2014/02/18 10:37:24 jer Exp $
+
+  18 Feb 2014; Jeroen Roovers <jer@gentoo.org> libebml-1.3.0.ebuild:
+  Stable for HPPA (bug #492240).
 
 *libebml-1.3.0 (21 Mar 2013)
 
